--- a/sass/app/navbar-view.scss
+++ b/sass/app/navbar-view.scss
@@ -64,5 +64,6 @@
 
     .navbar-collapse {
         background-color: $navbar-color;
+        border: 1px solid $navbar-border-color;
     }
 }
