--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -18,6 +18,7 @@ $font-color: rgba(0, 0, 0, 0.54);
 $muted-font-color: rgba(0, 0, 0, 0.34);
 
 $navbar-color: rgb(255, 255, 255); /* Must use rgb format as opacity is changed in JavaScript. */
+$navbar-border-color: #DCDCDC;
 
 $list-color: #F5F5F5;
 $list-separator-color: #DCDCDC;
